<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="10dp">

    <EditText
        android:id="@+id/edittext_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint_italic"
        android:textSize="16sp"
        android:textColorHint="#6B1187"
        android:inputType="text"
        android:background="@drawable/edittext_round"
        android:padding="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:elevation="10dp"/>

    <EditText
        android:id="@+id/edittext_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age_hint_italic"
        android:textSize="16sp"
        android:textColorHint="#6B1187"
        android:inputType="number"
        android:background="@drawable/edittext_round"
        android:padding="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:elevation="10dp"/>

    <EditText
        android:id="@+id/edittext_last_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_location_hint_italic"
        android:textSize="16sp"
        android:textColorHint="#6B1187"
        android:inputType="text"
        android:background="@drawable/edittext_round"
        android:padding="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:elevation="10dp"/>

    <EditText
        android:id="@+id/edittext_last_clothes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_clothes_hint_italic"
        android:textSize="16sp"
        android:textColorHint="#6B1187"
        android:inputType="text"
        android:background="@drawable/edittext_round"
        android:padding="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:elevation="10dp"/>

    <EditText
        android:id="@+id/edittext_contact_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_phone_hint_italic"
        android:textSize="16sp"
        android:textColorHint="#6B1187"
        android:inputType="number"
        android:background="@drawable/edittext_round"
        android:padding="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:elevation="10dp"/>

<!--    <LinearLayout-->
<!--        android:orientation="horizontal"-->
<!--        android:gravity="center"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->

<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:id="@+id/button_cancel_load"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Cancel"-->
<!--            android:textColor="@color/white"-->
<!--            android:textAllCaps="false"-->
<!--            android:layout_marginEnd="40dp"-->
<!--            android:background="#AB40CC"/>-->

<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:id="@+id/button_add_load"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Add"-->
<!--            android:textAllCaps="false"-->
<!--            android:textColor="@color/white"-->
<!--            android:layout_marginStart="40dp"-->
<!--            android:background="#AB40CC"/>-->

<!--    </LinearLayout>-->

</LinearLayout>